removed padding for comments on clinician dashboard and replaced with centering

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -505,7 +505,7 @@ select {
     display: flex;
     justify-content: center;
     text-align: center;
-    padding: 10%;
+    align-items: center;
     font-size: smaller;
     overflow: auto;
 }
