clinician can now see the time series they have allocated to a patient

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1187,6 +1187,11 @@ textarea::placeholder {
     font-weight: bold;
 }
 
+.modal-current-values{
+    padding: 10px 15px;
+
+}
+
 .modal-body {
     padding: 10px 15px;
     display: grid;
