updated modal appearance slightly. button now in center

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -65,6 +65,7 @@
                         {{else}}
                         <p>This patient has not been assigned any time series.</p>
                         {{/if}}
+                        <br>
                         <p>You can create a new time series for the patient below.</p>
 
                     </div>
@@ -123,7 +124,7 @@
                         </div>
 
                         <!-- Submit Button -->
-                        <input class="button01 submit" type="submit" value="Submit">
+                        <input class="modal-button modal-submit" type="submit" value="Submit">
                     </div>
                 </div>
             </form>
