--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1198,6 +1198,53 @@ textarea::placeholder {
     grid-template-columns: 50% 25% 25%;
 }
 
+
+.modal-button {
+    display: flex;
+    min-height: 90px;
+    max-width: 400px;
+    border-radius: 38px;
+    background-color: #72A6E8;
+    color: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    margin: 3%;
+    font-size: 24px;
+    /* font-weight: bold; */
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 1% 3% 1% 3%;
+    border: none;
+    cursor: pointer;
+    transition: all 0.5s ease 0s;
+}
+
+.modal-button:hover {
+    background-color: #8a3ee2;
+    transform: scale(1.05);
+    /*font-size: 22px;*/
+}
+
+
+.modal-submit {
+    text-align: center;
+    display: block;
+    font-size: 30px;
+    font-family: 'poppins', sans-serif;
+    color: white;
+    background-color: #7D92DB;
+    border-radius: 20px;
+    width: 500px;
+    min-height: 55px;
+    padding: 0%;
+    align-content: center;
+    justify-items: center;
+    margin-left: 50%;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+
+
 #backgroundMasker {
     position: fixed;
     opacity: 0;
