--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -66,7 +66,7 @@
                         <p>This patient has not been assigned any time series.</p>
                         {{/if}}
                         <br>
-                        <p>You can create a new time series for the patient below.</p>
+                        <p>You can create a new time series for the patient below:</p>
 
                     </div>
                     <div class="modal-body">
