added text to modal

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1244,6 +1244,10 @@ textarea::placeholder {
     margin-bottom: 20px;
 }
 
+.modal-note{
+    font-size: 15px;
+}
+
 
 #backgroundMasker {
     position: fixed;
