--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -67,6 +67,8 @@
                         {{/if}}
                         <br>
                         <p>You can create a new time series for the patient below:</p>
+                        <p class="modal-note">Note: when a user violates a threshold their entry value will appear red. Note that this applies retroactively - old entries are subject to the latest conditions that you have set in this window.</p>
+
 
                     </div>
                     <div class="modal-body">
