--- a/views/error_page.hbs
+++ b/views/error_page.hbs
@@ -6,7 +6,9 @@
     </section>
     <section>
         <br>
+        <div class="err-btn-container">
          <a href="{{buttonURL}}" class="backURL">{{buttonText}}</a> 
+        </div>
     </section>
     <br>
 </div>
