--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2361,6 +2361,30 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 
 }
 
+.settings_btn {
+    background-color: #7D92DB;
+    color: white; 
+    padding: 18px;
+    margin-left: auto; 
+    margin-right: 5%;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease 0s;
+}
+
+  /* Add a hover effect for buttons */
+.settings_btn:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+
+}
+
 .placeholderimg{
     border: 5px solid #555;
     border-radius: 50%;
