--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1108,6 +1108,15 @@ textarea::placeholder {
     background-color: #f0f0f3a2;
 }
 
+.clin-msg-box {
+    border-radius: 25px;
+}
+
+.clin-msg-btn {
+    border-radius: 25px;
+    /* background-color: #f5f5f7; */
+}
+
 .clinician-notes {
     display: grid;
     grid-template-columns: 12% 12% 76%;
