linked clinician password changer to backend

--- a/views/clinician_edit_profile.hbs
+++ b/views/clinician_edit_profile.hbs
@@ -14,13 +14,13 @@
                          <img src="../assets/placeholder-image.png" class= "placeholderimg">
                          <div class="settings_container">
                             <label for="firstname"><b>First Name</b></label>
-                            <input id="firstname" type="text" placeholder="'John'" name="firstname">
+                            <input id="firstname" type="text" placeholder="{{user.firstName}}" name="firstname">
 
                             <label for="lastname"><b>Last Name</b></label>
-                            <input id="lastname" type="text" placeholder="'Smith'" name="lastname">
+                            <input id="lastname" type="text" placeholder="{{user.lastName}}" name="lastname">
 
                             <label for="Username"><b>Username</b></label>
-                            <input id="Username" type="text" placeholder="'jsmith'" name="Username">
+                            <input id="Username" type="text" placeholder="{{user.firstName}}" name="Username">
 
                             <label for="psw"><b>New Password</b></label>
                             <input id="psw" type="password" placeholder="Password" name="psw">
