--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -15,15 +15,23 @@
                         
                         <div class="settings_container">
                             <label for="firstname"><b>First Name</b></label>
-                            <input id="firstname" type="text" placeholder="John" name="firstname" disabled>
+                            <input id="firstname" type="text" placeholder="{{user.firstName}}" name="firstname" disabled>
         
                             <label for="lastname"><b>Last Name</b></label>
-                            <input id="lastname" type="text" placeholder="Smith" name="lastname" disabled>
+                            <input id="lastname" type="text" placeholder="{{user.lastName}}" name="lastname" disabled>
         
                             <label for="Username"><b>Username</b></label>
-                            <input id="Username" type="text" placeholder="jsmith" name="Username" disabled>
-        
-                            <a class="settings_button" href="../clinician_dashboard/edit">EDIT PROFILE</a>
+                            <input id="Username" type="text" placeholder="{{user.username}}" name="Username" disabled>
+
+                            <form method="POST" class="clinician_change_password" action="/change_pwd">
+                                <label for="psw"><b>New Password</b></label>
+                                <input id="psw" type="password" placeholder="Password" name="password">
+
+                                <label for="psw"><b>Re-enter New Password</b></label>
+                                <input id="psw" type="password" placeholder="Re-enter Password" name="password">
+            
+                                <input class="settings_button" type="submit" value="SAVE CHANGES">
+                            </form>
                         </div>
                     </div>
                 </div>
