added top url tree to patient pages

--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -1,6 +1,10 @@
-<!-- Work in progress leaderboard framework HTML - currently hard coded and not linked yet-->
-{{!-- <h1 class="LB-heading">leaderboard</h1> --}}
-
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">Leaderboard</a>
+    </p>
+</div>
 
 <!-- container to hold everything -->
 <div class="leaderboard-container">
