--- a/views/patient_history.hbs
+++ b/views/patient_history.hbs
@@ -1,4 +1,11 @@
-<br>
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">View History</a>
+    </p>
+</div>
+
 <h1 class="heading">History</h1>
 <br>
 <div class="history-container">
