--- a/views/record_health.hbs
+++ b/views/record_health.hbs
@@ -1,8 +1,15 @@
-<!-- Converted record_health.html to .hbs, wired to database, MISSING SOME CSS STYLES-->
-<br>
+
+
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">Record Data</a>
+    </p>
+</div>
+
 <h1 class="heading">Record Data</h1>
 <br>
-
 
 
 <form method="POST" action="/post_values">
