--- a/views/patient_change_pwd.hbs
+++ b/views/patient_change_pwd.hbs
@@ -1,3 +1,11 @@
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">Settings</a>
+    </p>
+</div>
+
 <body>
     <h1 class="page_heading">Settings</h1>
         <div class="settings-form-container">
