updated leaderboard icons

--- a/views/leaderboard.hbs
+++ b/views/leaderboard.hbs
@@ -13,17 +13,17 @@
 <!-- Need to replace pat_username with his username and replace other usernames-->
     <div class="leaderboard-image-flex">
         <div class="place">
-            <img src="../assets/2nd.png" class="second-icon">
+            <img src="../assets/2nd-icon.png" class="second-icon">
             <p class="user-labels">{{second}}</p>
         </div>
 
         <div class="place">
-            <img src="../assets/1st.png" class="first-icon">
+            <img src="../assets/1st-icon.png" class="first-icon">
             <p class="user-labels">{{first}}</p>
         </div>
 
         <div class="place">
-            <img src="../assets/3rd.png" class="third-icon">
+            <img src="../assets/3rd-icon.png" class="third-icon">
             <p class="user-labels">{{third}}</p>
         </div>
     </div>
