--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -13,15 +13,16 @@
                     <label for="psw"><b>Password</b></label>
                     <input id="psw" type="password" placeholder="Enter Password" name="password">
                     <div class="psw">
-                        <label>
-                            <input type="checkbox" checked="checked" name="remember"> Remember me
+                        <label class="loginlabel">
+                        <input class="rememberedcheck"type="checkbox" checked="checked" name="remember">
+                            &nbsp Remember me
                         </label>
-                        <div><a href="#">Forgot password?</a></div>
+                        <div><a class="hreflinklogin" href="#">Forgot password?</a></div>
                     </div>
                     <button class="login_button">LOGIN</button>
 
                     <div class="acc-creation-text">
-                        <div>Don't have an account? <a href="/register">Create an Account.</a></div>
+                        <div>Don't have an account? <a class="hreflinklogin" href="/register">Create an Account.</a></div>
                     </div>
                 </div>
             </form>
