--- a/views/register_page.hbs
+++ b/views/register_page.hbs
@@ -21,7 +21,7 @@
                     <button class="login_button">REGISTER</button>
 
                     <div class="acc-creation-text">
-                        <div>Already have an account? <a href="login_page">Login.</a></div>
+                        <div>Already have an account? <a class="hreflinklogin" href="login_page">Login.</a></div>
                     </div>
 
                 </div>
