make the profile setting onpen by default

--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -1,4 +1,4 @@
-<body>
+<body onload="opentab(event, 'Profile Settings')">
     <h1 class="page_heading">Settings</h1>
     <!-- Tab links -->
     
