added nav links to patient settings

--- a/views/patient_acc_setting.hbs
+++ b/views/patient_acc_setting.hbs
@@ -1,5 +1,15 @@
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">Settings</a>
+    </p>
+</div>
+
 <body>
-    <h1 class="page_heading">Settings</h1>
+    {{!-- <h1 class="page_heading">Settings</h1> --}}
+        <h1 class="heading">Settings</h1>
+        <br>
         <div class="settings-form-container">
             <form class="detailsform" action="/change_pwd" method="post">
             <div class="innerbound">
