--- a/views/clinician_edit_profile.hbs
+++ b/views/clinician_edit_profile.hbs
@@ -1,5 +1,15 @@
+<div id="patient-specifics-topbar">
+    <p class="topbar-tree">
+        <a href="../" class="ul-text">Clinician Dashboard</a>
+    <p class="topbar-tree"> > </p>
+    <a href="" class="ul-text">Settings</a>
+    </p>
+</div>
+
+
 <body>
     <h1 class="page_heading">Settings</h1>
+    {{!-- <h1 class="page_heading">Settings</h1> --}}
     <!-- Tab links -->
     
     <div class="settings-form-container">
