--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1060,8 +1060,9 @@ textarea::placeholder {
     grid-template-columns: 30% 70%;
     grid-gap: 16px;
     /* background-color:#8B7CC9; */
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 9%;
+    padding-right: 9%;
+    padding-top: 1%;
 }
 
 .patient-specifics-pfp {
@@ -1141,17 +1142,20 @@ textarea::placeholder {
     grid-column-end: 3;
     border: 5px solid #eeeeee;
     border-radius: 25px;
-    padding: 10px;
-    background-color: #f0f0f3a2;
+    padding: 3% 4% 3% 4%;
 }
 
 .clin-msg-box {
     border-radius: 25px;
+    background-color: #f0f0f0;
 }
 
 .clin-msg-btn {
     border-radius: 25px;
-    /* background-color: #f5f5f7; */
+    margin-top:1%;
+    font-size: 20px;
+    background-color:#89b7f0;
+    color: #FFFFFF;
 }
 
 .clinician-notes {
@@ -1170,8 +1174,8 @@ textarea::placeholder {
 }
 
 .patient-specifics-overview-container {
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 9%;
+    padding-right: 9%;
     display: grid;
     grid-template-columns: 70% 30%;
     grid-column-gap: 16px;
@@ -1184,13 +1188,13 @@ textarea::placeholder {
 }
 
 .patient-specifics-graph {
-    padding: 10px;
+    padding: 3% 4% 3% 4%;
     border: 5px solid #eeeeee;
     border-radius: 25px;
 }
 
 .patient-specifics-month {
-    padding: 10px;
+    padding: 3% 4% 3% 4%;
     border: 5px solid #eeeeee;
     border-radius: 25px;
 }
