--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -7,7 +7,7 @@
     <p class="topbar-tree"> > </p>
     <a href="" class="ul-text">Clinician Record for {{profileData.username}}</a>
     </p>
-    <h1 id="username">Clinical Record for {{profileData.username}}</h1>
+    <h1 class="recordheader" id="username">Clinical Record for {{profileData.username}}</h1>
 </div>
 
 
