--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -1,6 +1,6 @@
 <div id="patient-specifics-topbar">
     <p class="topbar-tree">
-        <a href="../" class="ul-text">Clinician Dashboard</a>
+        <a href="../clinician_dashboard" class="ul-text">Clinician Dashboard</a>
     <p class="topbar-tree"> > </p>
     <a href="" class="ul-text">Settings</a>
     </p>
