fix nasty bug that caused time series stuff to be submitted when closing the window

--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -26,7 +26,7 @@
                 <div class="modal" id="modal">
                     <div class="modal-header">
                         <div class="title">Adjust Time Series</div>
-                        <button data-close-button class="close-button">&times;</button>
+                        {{!-- <button data-close-button class="close-button">&times;</button> --}}
                     </div>
                     <div class="modal-current-values">
                         {{#if permittedToRecordAnything}}
