--- a/views/comments.hbs
+++ b/views/comments.hbs
@@ -6,7 +6,7 @@
         <p class="topbar-tree"> > </p>
         <a href="/clinician_dashboard/comments" class="ul-text">All Patient Comments</a>
     </p>
-    <h1>All Patient Comments</h1>
+    <h1 class="recordheader">All Patient Comments</h1>
 </div>
 
 {{!-- <h1 class="clinician-title">All Patient Comments</h1> --}}
