--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,7 +28,7 @@
         <a href="/logout" class="nav-logout-icon"><img src="../assets/logout-icon.png"></a>
         <img class="nav-msg-icon" src="../assets/navbar_message_icon.png">
         <img class="nav-profile-verticle-bar" src="../assets/navbar_line_verticle.png">
-        <img class="nav-profile-icon" src="../assets/navbar_profile_icon.png">
+        <img class="nav-profile-icon" src="../assets/icon_profile.png">
 
         <nav>
             <ul class="flexbox-navbar-profile">
