--- a/views/patient_dashboard.hbs
+++ b/views/patient_dashboard.hbs
@@ -41,7 +41,7 @@
     <!-- Column 2 -->
     <!-- Nested grid container that stores buttons-->
     <div id="patient-dashboard-grid-container-nested">
-        <h2 class="patient-dashboard-notifications-text">Todays Requirements</h2>
+        <h2 class="patient-dashboard-notifications-text">Todays Requirements:</h2>
         {{!-- <h1 class="container-text"></h1> --}}
 
         <!-- Show notifications/current measurement tasks -->
