--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,6 +122,8 @@ header {
 }
 
 .nav-profile-icon {
+    height: 60px;
+    width: 60px;
     margin-left: 16px;
     margin-right: 16px;
 }
@@ -302,7 +304,7 @@ header {
     border-radius: 10px;
     width: 73.5%;
     height: 40px;
-    border: 3px solid #f5f5f5;
+    border: 2px solid #f5f5f5;
     display: flex;
     margin-right: 3%;
 }
@@ -419,7 +421,8 @@ select {
     width: 80%;
     border-radius: 20px;
     margin-bottom: 50px;
-    border: 3px solid #ececee;
+    border: 2px solid #f5f5f5;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);;
     background-color: #f0f0f3;
     display: grid;
     grid-template-columns: [first] 32% [line2] 17% [line3] 17% [line4] 17% [line5] 17% [last-line];
@@ -519,7 +522,8 @@ select {
     height: 175px;
     width: 20%;
     margin-bottom: 50px;
-    border: 3px solid #ececee;
+    border: 2px solid #f5f5f5;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);;
     background-color: #f0f0f3;
     border-radius: 20px;
     margin-left: 3%;
@@ -554,7 +558,8 @@ select {
     height: 300px;
     margin-left: 5%;
     border-radius: 10px;
-    border: 3px solid #ececee;
+    border: 2px solid #f5f5f5;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);;
     grid-template-columns: [first-column] 20% [second-column] 20% [third-column] 45% [forth-column] 15% [last-column];
     grid-template-rows: [first-row] 20% [second-row] 16% [second-row] 16% [second-row] 16% [second-row] 16% [second-row] 16% [last-row];
     margin-bottom: 50px;
@@ -903,6 +908,7 @@ input[name="Selector"] {
     height: 75px;
     padding-left: 5%;
     align-items: center;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
 }
 
 .radioContainer:hover {
@@ -1068,7 +1074,7 @@ textarea::placeholder {
     padding-left: 9%;
     padding-right: 9%;
     padding-top: 1%;
-    padding-bottom: 1%;
+    padding-bottom: 3%;
 }
 
 .patient-specifics-pfp {
@@ -1076,7 +1082,9 @@ textarea::placeholder {
 }
 
 .patient-specifics-userbox {
-    border: 5px solid #eeeeee;
+    border: 2px solid #eeeeee;
+background: white;
+filter: drop-shadow(4px 4px 3px #D4D4D4);
     border-radius: 25px;
     display: flex;
     align-items: center;
@@ -1104,8 +1112,10 @@ textarea::placeholder {
     grid-template-columns: 15% 15% 15% 15% 40%;
     /* grid-template-rows: repeat(999, auto) repeat(3, 1fr); */
     grid-auto-rows: 60px;
-    border: 5px solid #eeeeee;
     border-radius: 25px;
+    border: 2px solid #eeeeee;
+    background: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
 }
 
 .patient-specifics-table-attachedData {
@@ -1147,7 +1157,9 @@ textarea::placeholder {
 .patient-specifics-notes-container {
     grid-column-start: 1;
     grid-column-end: 3;
-    border: 5px solid #eeeeee;
+    border: 2px solid #eeeeee;
+background: white;
+filter: drop-shadow(4px 4px 3px #D4D4D4);
     border-radius: 25px;
     padding: 3% 4% 3% 4%;
 }
@@ -1198,14 +1210,18 @@ textarea::placeholder {
 
 .patient-specifics-graph {
     padding: 16px;
-    border: 5px solid #eeeeee;
+    border: 2px solid #eeeeee;
+    background: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
     border-radius: 25px;
     height:fit-content;
 }
 
 .patient-specifics-month {
     padding: 16px;
-    border: 5px solid #eeeeee;
+    border: 2px solid #eeeeee;
+    background: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
     border-radius: 25px;
     height:100%
 }
@@ -1248,7 +1264,7 @@ textarea::placeholder {
     border: none;
     outline: none;
     background: none;
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     font-weight: bold;
 }
 
@@ -1298,7 +1314,7 @@ textarea::placeholder {
     font-family: 'poppins', sans-serif;
     color: white;
     background-color: #7D92DB;
-    border-radius: 20px;
+    border-radius: 50px;
     width: 500px;
     min-height: 55px;
     padding: 0%;
@@ -1306,7 +1322,7 @@ textarea::placeholder {
     justify-items: center;
     margin-left: 45%;
     margin-right: auto;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .modal-note{
@@ -1333,12 +1349,17 @@ textarea::placeholder {
 
 
 .checkbox {
-    display: inline-block;
-    margin-bottom: 20px;
+    display: inline-flex;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .checkbox input {
     width: auto;
+    margin-right: 4%;
+    margin-left: 4%;
 }
 
 .popup-input-box-container {
@@ -1354,6 +1375,7 @@ input[id="popup-input-box"] {
     max-width: 100px;
     height: 40px;
     border: 1px solid black;
+    margin-top: 10px;
 }
 
 input[id="clinicanNote"] {
@@ -1556,13 +1578,18 @@ footer {
 /* ----------------- PATIENT COMMENTS CSS---------------------*/
 .comments-grid-container {
     display: grid;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 9%;
+    margin-right: 9%;
+    margin-bottom: 5%;
 }
 
 .comments-grid-table {
     display: grid;
-    grid-template-columns: 15% 10% 75%;
+    grid-template-columns: 25% 15% 60%;
+    border: 2px solid #eeeeee;
+    background: white;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    border-radius: 25px;
     /* border:2px solid #eeeeee;
     border-radius: 25px; */
 }
@@ -1576,6 +1603,10 @@ footer {
     display: grid;
     grid-template-columns: 70% 30%;
     border: 1px solid #eeeeee;
+    border-top: none;
+    border-right: none;
+    min-height: 50px;
+    align-items: center;
 }
 
 .comments-table-cell-link {
@@ -1654,6 +1685,7 @@ img {
     color: #72A6E8;
     margin-top: 0px;
     font-weight: bold;
+
 }
 
 .blue {
@@ -1717,12 +1749,12 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 
 .flexbox-form-container {
     display: flex;
-    min-height: 100vh;
+    min-height: 80vh;
     max-width: 80vh;
     margin-left: auto;
     margin-right: auto;
@@ -1737,8 +1769,8 @@ p {
     background-color: #FFFFFF;
     border-radius: 38px;
     filter: drop-shadow(4px 4px 3px #858484);
-    padding-top: 15%;
-    padding-bottom: 10%;
+    padding-top: 13%;
+    padding-bottom: 9%;
 }
 
 .login_heading {
@@ -2291,10 +2323,10 @@ input[id=lname] {
 
 .backURL {
     display: flex;
-    min-height: 120px;
+    min-height: 90px;
     /* max-width: 4000px; */
     width: 350px;
-    border-radius: 38px;
+    border-radius: 300px;
     background-color: #72A6E8;
     color: white;
     filter: drop-shadow(4px 4px 3px #D4D4D4);
@@ -2307,7 +2339,9 @@ input[id=lname] {
     border: none;
     cursor: pointer;
     transition: all 0.5s ease 0s;
+    white-space: nowrap;
 }
+
 
 .blue-heading-medium {
     font-size: 24px;
@@ -2368,8 +2402,8 @@ input[id=lname] {
 .detailsform {
     background-color: #FFFFFF;
     border-radius: 38px;
-    filter: drop-shadow(4px 4px 3px #858484);
-    border: 2px solid #E7E7E7;
+    border: 2px solid #f5f5f5;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
     padding-top: 2%;
     padding-bottom: 5%;
     margin: 0% 5% 5% 5%;
@@ -2408,7 +2442,7 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 
 .settings-form-container {
     display: flex;
-    max-width: 95%;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
     align-content: center;
@@ -2416,9 +2450,15 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     flex-direction: column;
 }
 
+.left_settings{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /* Add padding to containers */
 .settings_container {
     padding: 10px 15%;/* First value: padding top and bottom. Second value: padding on sides. */ 
+
 }
 .settings_button {
     background-color: #7D92DB;
@@ -2471,8 +2511,6 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 }
 
 .placeholderimg{
-    border: 5px solid #555;
-    border-radius: 50%;
     max-height: 200px;
     max-width: 200px;
 }
