--- a/views/attached_data.hbs
+++ b/views/attached_data.hbs
@@ -8,7 +8,7 @@
         <p class="topbar-tree"> > </p>
         <a href="" class="ul-text">Attached Entry Data</a>
     </p>
-    <h1>Entry Data for {{username}}</h1>
+    <h1 class="recordheader">Entry Data for {{username}}</h1>
 </div>
 
 <div id="patient-specifics-container">
