more verification hardening. added required tags to input

--- a/views/clinician_edit_profile.hbs
+++ b/views/clinician_edit_profile.hbs
@@ -1,3 +1,5 @@
+<!-- THIS HANDLEBARS FILE IS NOT IN USE ANYMORE -->
+
 <div id="patient-specifics-topbar">
     <p class="topbar-tree">
         <a href="../" class="ul-text">Clinician Dashboard</a>
