--- a/views/login_page.hbs
+++ b/views/login_page.hbs
@@ -8,16 +8,16 @@
                 {{/each}}
                 <div class="login_container">
                     <label for="uname"><b>Username</b></label>
-                    <input id="username" type="text" placeholder="Enter Username" name="username">
+                    <input id="username" type="text" placeholder="Enter Username" name="username" required>
 
                     <label for="psw"><b>Password</b></label>
-                    <input id="psw" type="password" placeholder="Enter Password" name="password">
+                    <input id="psw" type="password" placeholder="Enter Password" name="password" required>
                     <div class="psw">
                         <label class="loginlabel">
                         <input class="rememberedcheck"type="checkbox" checked="checked" name="remember">
                             &nbsp Remember me
                         </label>
-                        <div><a class="hreflinklogin" href="#">Forgot password?</a></div>
+                        {{!-- <div><a class="hreflinklogin" href="#">Forgot password?</a></div> --}}
                     </div>
                     <button class="login_button">LOGIN</button>
 
