--- a/views/patient_change_pwd.hbs
+++ b/views/patient_change_pwd.hbs
@@ -1,3 +1,6 @@
+<!-- THIS HANDLEBARS FILE IS NOT IN USE ANYMORE -->
+
+
 <div id="patient-specifics-topbar">
     <p class="topbar-tree">
         <a href="/patient_dashboard" class="ul-text">Patient Dashboard</a>
