--- a/views/register_page.hbs
+++ b/views/register_page.hbs
@@ -5,18 +5,18 @@
                 <h2 class="login_heading">REGISTER</h2>
                 <div class="login_container">
                     <label for="username"><b>Username</b></label>
-                    <input id="username" type="text" placeholder="Enter Username" name="username">
+                    <input id="username" type="text" placeholder="Enter Username" name="username" required>
 
                     <label for="fname"><b>First Name</b></label>
-                    <input id="fname" type="text" placeholder="Enter your first name" name="fname">
+                    <input id="fname" type="text" placeholder="Enter your first name" name="fname" required>
 
                     <label for="fname"><b>Last Name</b></label>
-                    <input id="fname" type="text" placeholder="Enter your surname" name="lname">
+                    <input id="fname" type="text" placeholder="Enter your surname" name="lname" required>
 
                     <label for="psw"><b>Password</b></label>
-                    <input id="psw" type="password" placeholder="Enter Password" name="password">
+                    <input id="psw" type="password" placeholder="Enter Password" name="password" required>
                     <label for="psw"><b>Confirm Password</b></label>
-                    <input id="psw" type="password" placeholder="Verify Password" name="password2">
+                    <input id="psw" type="password" placeholder="Verify Password" name="password2" required>
                     <br>
                     <button class="login_button">REGISTER</button>
 
