--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -42,10 +42,10 @@
 
                             <form method="POST" class="clinician_change_password" action="/change_pwd">
                                 <label for="psw"><b>New Password</b></label>
-                                <input id="psw" type="password" placeholder="Password" name="password">
+                                <input id="psw" type="password" placeholder="Password" name="password" required>
 
                                 <label for="psw"><b>Re-enter New Password</b></label>
-                                <input id="psw" type="password" placeholder="Re-enter Password" name="password">
+                                <input id="psw" type="password" placeholder="Re-enter Password" name="password" required>
             
                                 <input class="settings_button" type="submit" value="SAVE CHANGES">
                             </form>
@@ -59,19 +59,19 @@
                         
                         <div class="settings_container">
                             <label for="firstname"><b>Patient First Name</b></label>
-                            <input id="firstname" type="text" placeholder="'John'" name="fname">
+                            <input id="firstname" type="text" placeholder="'John'" name="fname" required>
             
                             <label for="lastname"><b>Patient Last Name</b></label>
-                            <input id="lastname" type="text" placeholder="'Smith'" name="lname">
+                            <input id="lastname" type="text" placeholder="'Smith'" name="lname" required>
             
                             <label for="Username"><b>Set Username</b></label>
-                            <input id="Username" type="text" placeholder="'jsmith'" name="username">
+                            <input id="Username" type="text" placeholder="'jsmith'" name="username" required>
             
                             <label for="psw"><b>Set Password</b></label>
-                            <input id="psw" type="password" placeholder="Password" name="password">
+                            <input id="psw" type="password" placeholder="Password" name="password" required>
             
                             <label for="psw"><b>Re-enter Password</b></label>
-                            <input id="psw" type="password" placeholder="Re-enter Password" name="password2">
+                            <input id="psw" type="password" placeholder="Re-enter Password" name="password2" required>
             
                             <button class="settings_button">REGISTER PATIENT</button>
                         </div>
