--- a/views/patient_acc_setting.hbs
+++ b/views/patient_acc_setting.hbs
@@ -34,10 +34,10 @@
                     <input id="Username" type="text" placeholder="{{user.username}}" name="Username" disabled>
 
                     <label for="psw"><b>New Password</b></label>
-                    <input id="psw" type="password" placeholder="Password" name="password">
+                    <input id="psw" type="password" placeholder="Password" name="password" required>
 
                     <label for="psw"><b>Re-enter New Password</b></label>
-                    <input id="psw" type="password" placeholder="Re-enter Password" name="password">
+                    <input id="psw" type="password" placeholder="Re-enter Password" name="password" required>
 
                     <input class="settings_button" type = "submit" value="SAVE CHANGES">
                 </div>
